kubernetes/part_20/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/app-root: 
spec:
  rules:
  - host: alertmanager.mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix  # pathType no longer has a default value in v1; "Exact", "Prefix", or "ImplementationSpecific" must be specified
        backend:
          service:
            name: alertmanager-main
            port:
              name: web
  tls:
  - hosts:
    - alertmanager.mydomain.com
    secretName: alertmanager.mydomain.com-tls
