kubernetes/part_20/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/app-root: 
spec:
  rules:
  - host: grafana.mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: grafana
            port:
              name: http
        
  tls:
  - hosts:
    - grafana.mydomain.com
    secretName: grafana.mydomain.com-tls
